feat: 追蹤的相關功能
